--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Aug 13 16:25:09 BDT 2020
-sdk.dir=C\:\\Users\\rafid\\AppData\\Local\\Android\\Sdk
+#Sat Aug 15 22:20:43 BDT 2020
+sdk.dir=C\:\\Users\\Aryan Mamun\\AppData\\Local\\Android\\Sdk
